Modificação de inline-block para display flex

--- a/VerticalLayout.html
+++ b/VerticalLayout.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="cols-item">Hey look! I'm vertically centered</div>
         <div class="cols-item">Hey look! I'm vertically centered</div>
-        <div class="cols-item ">dsadsa</div>
+        <div class="cols-item ">Hey look! I'm vertically centered</div>
     </div>
 </body>
 
