--- a/VerticalLayout.html
+++ b/VerticalLayout.html
@@ -10,9 +10,16 @@
 
 <body>
     <div class="container">
-        <div class="cols-item">Hey look! I'm vertically centered</div>
-        <div class="cols-item">Hey look! I'm vertically centered</div>
-        <div class="cols-item ">Hey look! I'm vertically centered</div>
+        <div class="cols-item"><p>Hey look! I'm vertically centered</p></div>
+        <div class="cols-item">
+            <p>Hey look! I'm vertically centered</p>
+            <p>Hey look! I'm vertically centered</p>
+        </div>
+        <div class="cols-item">
+            <p>Hey look! I'm vertically centered</p>
+            <p>Hey look! I'm vertically centered</p>
+            <p>Hey look! I'm vertically centered</p>
+        </div>
     </div>
 </body>
 
