--- a/BasicForm.html
+++ b/BasicForm.html
@@ -68,8 +68,10 @@
                 <br>
                 Mini-Currículo:
                 <textarea rows="7" cols="45"></textarea>
-
             </fieldset>
+            <br>
+            <input type="button" value="Enviar">
+            <input type="button" value="Limpar">
         </form>
 
     </body>
