Desafio HTML Css Finalizado !

--- a/Card.html
+++ b/Card.html
@@ -12,9 +12,10 @@
 <body>
     <div class="container">
         <img src="Dilmae.jpg" alt="NoticiaImagem">
-        <p>"Não acho que quem ganhar ou quem perder, nem quem ganhar nem perder, vai ganhar ou perder - Rouseff, Dilma" </p>
+        <p>"Não acho que quem ganhar ou quem perder, nem quem ganhar nem perder, vai ganhar ou perder - Rouseff, Dilma"
+        </p>
         <img class="logo" src="logo-istoe.png">
-        26 min  
+        <h3>26 min</h3>
     </div>
 </body>
 
